# tetrabot-sim-team

./: .gitignore  PROJECT_NOTES.md  README.md  launch.bat  launch.sh  pyproject.toml
assets/environment/: A30X_AllCATPart.usd  A320_AIX.usd  HATRACKS.usd  Lavatory_AIX.usd  cabin_wrapped.usd  euro_pallet.usd  pallet_box_a.usd  pallet_box_b.usd
assets/meshes/visual/: chassis_only.stl  lift_central.stl  wheel.stl
config/: fastdds_localhost_peers.xml
g1_handover/: __init__.py  cabin_handover_env_cfg.py  make_cabin_wrapper.py  mdp_terms.py  pick_turn_env_cfg.py  record_handover.py  stream_hold.py
scripts/setup/: README.md  setup_brev.sh  setup_ubuntu.sh  setup_windows.bat
tools/: cloud_start.sh  convert_pallet_to_usd.py  convert_step_to_usd.py  decimate_meshes.py  diag_windows_listener.py  diag_wsl_multicast_sniff.py  extract_chassis_only.py  g1_ik.py  launch.py  rl_policy.py  run_demo.py  split_mecanum.py  stl_to_usd.py  train_g1_locomotion.py  usd_to_stl.py  usd_to_stl_combined.py  validate_urdf.py
urdf/: tetrabot.urdf
urdf/tetrabot/: tetrabot.usd
urdf/tetrabot/configuration/: tetrabot_physics.usd  tetrabot_robot.usd  tetrabot_sensor.usd
